--- a/plugin.ini
+++ b/plugin.ini
@@ -3,8 +3,8 @@ name="Item Review"
 author="Ned Henry"
 description="Adds the ability to mark all item created by certain user roles for administrative review before publication."
 license="GPLv3"
-link=""
-support_link=""
+link="https://github.com/UCSCLibrary/ItemReview"
+support_link="https://github.com/UCSCLibrary/ItemReview/issues"
 omeka_minimum_version="2.1"
 omeka_target_version="2.2"
 version="1.1"
