--- a/plugin.ini
+++ b/plugin.ini
@@ -1,6 +1,6 @@
 [info]
 name="Item Review"
-author="Ned Henry"
+author="UC Santa Cruz University Library"
 description="Adds the ability to mark all item created by certain user roles for administrative review before publication."
 license="GPLv3"
 link="https://github.com/UCSCLibrary/ItemReview"
